@@ -31,6 +31,9 @@ release.
   
 - Fix bug #3943, issues with move lines up and down macros. (Dale Anson)  
 
+- Fix bug #3923, documentation bug about where auto-saved files are saved.
+  (Dale Anson)
+
 }}}
 {{{ UI Improvements
 
